--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ height:300px;
 <div class="icon">
 <img src="image/vivah1.jpg"  width="270px"></a></div>
 <div class="banner">
-<marquee style="font-size:30px;"><i>The shaadishopping.com Web site is the application that provides customers with online shopping. Through a Web browser, a customer can browse the catalog and place items to purchase into a virtual shopping cart</i></marquee>
+<marquee style="font-size:30px;"><i>The shaadishopping.com Web site is the application that provides customers with online shopping. Through a Web browser, a customer can browse the catalog and place items to purchase into a virtual shopping cart.</i></marquee>
 <ul style="padding-left:10px;">
  <b> <li><a href="wedding.html">Home</a></li>
   <li><a href="accessories">Accessories</a></li>
